--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
   <head>
     <link rel="stylesheet" href="goop.css"/>
     <style>
-body {
-  background-image: url('https://i5.walmartimages.com/asr/50b3799f-6889-4fa7-8a0f-cba3a4ea9eb7.540870ee59ea9aa48e95a2d7a8c73dff.jpeg?odnWidth=1000&odnHeight=1000&odnBg=ffffff');
-}
       </style>
   </head>
   
@@ -19,7 +16,7 @@ body {
   </ul></div>
 <h1>Skills</h1>
 <div class="hotdog"><ul>
-  <li> html/css programming
+  <li> at home card dealing
   <li> working with people
   <li> being a completionist </ul> </div>
 <h1>Experience</h1>
